--- a/blocks/demo/package.json
+++ b/blocks/demo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@umi-block/block",
+  "name": "@umi-block/demo",
   "version": "0.0.1",
   "description": "",
   "main": "src/index.js",
@@ -7,7 +7,7 @@
     "name": "",
     "email": ""
   },
-  "repository": "umijs/umi-blocks/block",
+  "repository": "umijs/umi-blocks/demo",
   "scripts": {
     "dev": "umi dev"
   },
